fixed the contact page

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelsi Hoyle's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
@@ -23,25 +23,21 @@
         </div>
     </header>
 
-    <section class="mainContent">
-        <h2>About Me</h2>
-        <div class="content clearfix aboutMe">
-            <img src="assets/images/portrait.jpg" alt="portrait of Kelsi" id="portrait" />
-            <p>I am a mom turned developer. I began coding as a way to keep myself entertained and challenged during my
-                many
-                late nights
-                with a baby. It turned out that I found a passion in the puzzles and wizardry that I programming! I am
-                lucky enough to change my passion into a career!</p>
-            <p>When I am not learning and creating, you can find me hiking, cooking, and cuddling my two dogs. I love
-                exploring and the discovering!</p>
-            <p>Feel free to poke around to learn more about me and my many projects. Thank you for stopping by!</p>
-        </div>
-    </section>
+    <form class="mainContent">
+        <h2>Contact</h2>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="user_name" value="John Smith" />
+        <label for="email">Email</label>
+        <input type="email" id="email" name="user_email" value="example@gmail.com" />
+        <label for="message">Message</label>
+        <textarea id="message" name="user_message"></textarea>
+        <button type="submit">Submit</button>
+    </form>
 
     <footer>
         <p> Copyright &copy;</p>
     </footer>
-</body>
 
+</body>
 
 </html>
