fixing typos and adding projects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
@@ -46,32 +46,32 @@
                     <li class="describe">
                         <i class="material-icons list-icon">whatshot</i>
                         <h5>Passionate</h5>
-                        <p>I am invested in every opportunity.</p>
+                        <p>I am invested and excited for every opportunity to grow.</p>
                     </li>
                     <li class="describe">
                         <i class="material-icons list-icon">terrain</i>
                         <h5>Adventerous</h5>
-                        <p>I am in my element when I am facing a challening and new problem.</p>
+                        <p>I am in my element when I am facing a challenigng problem.</p>
                     </li>
                     <li class="describe">
                         <i class="material-icons list-icon">trending_up</i>
                         <h5>Always Growing</h5>
-                        <p>I actively create opportunities to broaden my knowledge and skills.</p>
+                        <p>I actively seek opportunities to broaden my knowledge and skills.</p>
                     </li>
                 </ul>
                 <div class="content">
                     <div class="clearfix">
-                            <div class="float-right">
-                                    <img src="assets/images/portrait.jpg" alt="portrait" class="portrait">
-                                </div>
+                        <div class="float-right">
+                            <img src="assets/images/portrait.jpg" alt="portrait" class="portrait">
+                        </div>
                         <div class="float-left">
                             <p>I started coding as a hobby, and it quickly became a passion. The puzzles of the new
-                                technologies drew me in and I have been constantly learning ever since! When I'm not
-                                coding,
-                                you can find me hiking with my family or creating a new recipe in the kitchen.</p>
-
-                                <h4>Technologies:</h4>
-                    <p>HTML5, CSS3, BootStrap, Materialize, JavaScript, JQuery, MySQL, Node.js, Express, Sequelize, Handlebars Templating, and always adding more to my skills.</p>
+                                technologies drew me in and I have been constantly learning ever since! My background in
+                                eduacation also fuels my passion for working and learning with others. I love sharing
+                                what I learned with my coworkers as much as I love learning.</p>
+                            <h4>Technologies:</h4>
+                            <p>HTML5, CSS3, BootStrap, Materialize, JavaScript, JQuery, MySQL, Node.js, Express,
+                                Sequelize, Handlebars Templating, and always adding more to my skills.</p>
                         </div>
                     </div>
                 </div>
