--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li class="describe">
                         <i class="material-icons list-icon">terrain</i>
                         <h5>Adventerous</h5>
-                        <p>I am in my element when I am facing a challenigng problem.</p>
+                        <p>I am in my element when I am facing a challenging problem.</p>
                     </li>
                     <li class="describe">
                         <i class="material-icons list-icon">trending_up</i>
