updated portfolio with new project and picture

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <a href="https://github.com/kelsimhoyle" target="_blank" class="contact">
                                 <img src="assets/images/GitHub-Mark-64px.png" alt="github" class="contact">
                             </a>
-                            <a href="#" target="_blank" class="contact">
+                            <a href="https://www.linkedin.com/in/kelsi-hoyle-983266186/" target="_blank" class="contact">
                                 <img src="assets/images/LI-In-Bug.png" alt="linkedin" class="contact">
                             </a>
                             <a href="mailto:kelsimhoyle@gmail.com" target="_blank" class="contact"><img
