--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="describe">
                         <i class="material-icons list-icon">whatshot</i>
                         <h5>Passionate</h5>
-                        <p>I am invested and excited for every opportunity to grow.</p>
+                        <p>I invest myself in projects and building my knowledge.</p>
                     </li>
                     <li class="describe">
                         <i class="material-icons list-icon">terrain</i>
@@ -65,10 +65,9 @@
                             <img src="assets/images/portrait.jpg" alt="portrait" class="portrait">
                         </div>
                         <div class="float-left">
-                            <p>I started coding as a hobby, and it quickly became a passion. The puzzles of the new
-                                technologies drew me in and I have been constantly learning ever since! My background in
-                                eduacation also fuels my passion for working and learning with others. I love sharing
-                                what I learned with my coworkers as much as I love learning.</p>
+                            <p>I am a full stack web developer with a background in education. I started coding as a
+                                hobby, and it quickly turned into a passion. I jumped into the field of web devolopment
+                                because I love challenges and learning. I am always looking for ways to grow!</p>
                             <h4>Technologies:</h4>
                             <p>HTML5, CSS3, BootStrap, Materialize, JavaScript, JQuery, MySQL, Node.js, Express,
                                 Sequelize, Handlebars Templating, and always adding more to my skills.</p>
@@ -95,7 +94,8 @@
                             <a href="https://github.com/kelsimhoyle" target="_blank" class="contact">
                                 <img src="assets/images/GitHub-Mark-64px.png" alt="github" class="contact">
                             </a>
-                            <a href="https://www.linkedin.com/in/kelsi-hoyle-983266186/" target="_blank" class="contact">
+                            <a href="https://www.linkedin.com/in/kelsi-hoyle-983266186/" target="_blank"
+                                class="contact">
                                 <img src="assets/images/LI-In-Bug.png" alt="linkedin" class="contact">
                             </a>
                             <a href="mailto:kelsimhoyle@gmail.com" target="_blank" class="contact"><img
